--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -18,6 +18,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -25,6 +26,12 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><form action="/urls/<%= url %>/delete" method="POST">
+              <button name="deletebutton">Delete</button>
+            </form>
+            </td>
+            <!-- <td><button type="button" form method="POST" action="/urls/<%= url %>/delete">Delete</button></td> -->
+
           </tr>
         <% } %>
       </tbody>
