--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,6 +19,7 @@
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
           <th scope="col">Delete</th>
+          <th scope="col">Update</th>
         </tr>
       </thead>
       <tbody>
@@ -27,7 +28,11 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td><form action="/urls/<%= url %>/delete" method="POST">
-              <button name="deletebutton">Delete</button>
+              <button>Delete</button>
+            </form>
+            </td>
+            <td><form action="/urls/<%= url %>" method="GET">
+              <button>Update</button>
             </form>
             </td>
             <!-- <td><button type="button" form method="POST" action="/urls/<%= url %>/delete">Delete</button></td> -->
