--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,21 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <div>
+      
+      <% if(username){ %>
+        <h3><span>Hello <%=username%>!</span></h3>
+        <form action="/logout" method="POST">
+          <button>Log out</button>
+        </form>
+      <% } else{ %>  
+        <form action="/login" method="POST">
+          Username: <input type = "text" name = "username"/>
+          <button>Log in</button>
+        </form>
+      <% } %>
+      
+      
+    </div>
   </nav>
 </header>
