--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -16,7 +16,7 @@
 
     <main style="margin: 1em;">
       <h3>Register</h3>
-      <form class="form-inline" action="/urls" method="POST">
+      <form class="form-inline" action="/register" method="POST">
         <div class="form-group mb-2">
           
           <input class="form-control" type="email" name="email" placeholder="Username" style="width: 300px; margin: 1em">
