user registration now works fully

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,20 +9,22 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <a class="nav-item nav-link" href="/register">Register</a>
+        <!-- <a class="nav-item nav-link" href="/login">Log in</a> -->
       </div>
     </div>
     <div>
       
-      <% if(user_id){ %>
+      <% if(user_id && user){ %>
         <h3><span>Hello <%=user.email%>!</span></h3>
         <form action="/logout" method="POST">
           <button class="btn btn-primary">Log out</button>
         </form>
       <% } else{ %>  
-        <form action="/login" method="POST">
+        <!-- <form action="/login" method="POST">
           Username: <input type = "text" name = "email"/>
           <button class="btn btn-primary">Log in</button>
-        </form>
+        </form> -->
+        <a class="nav-item nav-link" href="/login">Log in</a>
       <% } %>
       
       
