--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -15,8 +15,8 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Register</h3>
-      <form class="form-inline" action="/register" method="POST">
+      <h3>Log in</h3>
+      <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2">
           
           <input class="form-control" type="email" name="email" placeholder="Email Address" style="width: 300px; margin: 1em">
