basic permissions added

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,7 +26,7 @@
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url]["longURL"] %></td>
             <td><form action="/urls/<%= url %>/delete" method="POST">
               <button>Delete</button>
             </form>
